[package]
name = "skynet_api_task"
version = "0.3.4"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet monitor plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

actix-cloud = "0.4"
skynet_api = { version = "0.2", features = ["skynet"] }

[workspace]
